Bug 340902 - Saving anonymous file loses relation between investment accounts and brokerage accounts
Summary: Saving anonymous file loses relation between investment accounts and brokerag...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-12 19:44 UTC by Jack
Modified: 2018-10-13 16:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2014-11-12 19:44:30 UTC
When saving a kmy file as an anonymous file, all account names are changed to the internal id of the account (Annnnnn).  The causes a problem for investment accounts, since importing transactions require the associated brokerage account to have the same name with " (Brokerage" appended.

I might file a separate wish-list for KMM to simply keep a pointer to the brokerage account for an investment account, so this name restriction can be eliminated, but this is a good example of where it causes a problem.
Comment 1 Thomas Baumgart 2018-10-13 16:08:36 UTC
Git commit 56cf4d5a2490c5decb497b3780c8f7bf1ac1e571 by Thomas Baumgart.
Committed on 13/10/2018 at 16:06.
Pushed by tbaumgart into branch '5.0'.

Keep the relationship between investment and brokerage account

Don't break the relationship between an investment account and its
brokerage account when anonymizing the data.
FIXED-IN: 5.0.2

M  +22   -0    kmymoney/plugins/xml/mymoneystorageanon.cpp
M  +3    -1    kmymoney/plugins/xml/mymoneystorageanon.h

https://commits.kde.org/kmymoney/56cf4d5a2490c5decb497b3780c8f7bf1ac1e571