Keep the relationship between investment and brokerage account

Don't break the relationship between an investment account and its
brokerage account when anonymizing the data.

BUG: 340902
FIXED-IN: 5.0.2